--- a/package.json
+++ b/package.json
@@ -122,5 +122,9 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0"
   }
 }
