--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-named-asset-import": "^0.2.3",
     "babel-preset-react-app": "^6.1.0",
     "bfj": "6.1.1",
+    "braft-editor": "^2.2.5",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
     "css-loader": "1.0.0",
@@ -36,6 +37,7 @@
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "mini-css-extract-plugin": "0.4.3",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -46,6 +48,7 @@
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.0",
+    "react-quill": "^1.3.3",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-transition-group": "^2.5.0",
@@ -54,6 +57,7 @@
     "redux-thunk": "^2.3.0",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
+    "simditor": "^2.3.23",
     "style-loader": "0.23.0",
     "styled-components": "^4.0.3",
     "terser-webpack-plugin": "1.1.0",
