--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-syntax-decorators": "^7.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0"
   }
